k8s/cow-svc-int.yaml
apiVersion: v1
kind: Service
metadata:
  name: cow-svc
  labels:
    name: cow-svc
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: application
  selector:
    app: cowsay
